style.css
html {
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

*, *::before, *::after {
  -webkit-box-sizing: inherit;
  box-sizing: inherit;
}

.cf::after {
  content: "";
  display: table;
  clear: both;
}

.center-global {
  margin: 0 auto;
  width: 1020px;
}

.logo {
  float: left;
  margin-left: 145px;
  margin-top: -34px;
  position: relative;
  top: 34px;
}

.media {
  clear: left;
  padding-bottom: 28px;
  overflow: hidden;
}

.media img {
  max-width: 100%;
  float: left;
  margin-right: 30px;
}

.latest {
  width: 640px;
  float: left;
  padding: 0 40px;
}

nav {
  float: right;
  margin-right: 177px;
  margin-top: 20px;
}

nav ul {
  list-style: none;
  margin: 0;
  padding: 0;
}

nav ul li {
  display: inline-block;
  margin-right: 30px;
}

.promo {
  position: relative;
}

.promo-desc {
  position: absolute;
  bottom: 93px;
  right: 75px;
}

.sidebar {
  width: 360px;
  float: right;
}

.tweet {
  padding-left: 55px;
  padding-right: 20px;
  position: relative;
}

.tweet::before {
  content: url(../images/twitter-icon.png);
  display: block;
  position: absolute;
  left: 15px;
  top: 4px;
}

